<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">偶见</string>
    <string name="action_settings">Settings</string>
    <string name="phonenum">手机号</string>
    <string name="qphonenum">请输入手机号</string>
    <string name="pwd">密码</string>
    <string name="qpwd">请输入密码</string>
    <string name="qpwd_true">请确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="fopwd">忘记密码？</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="qyanzhengma">请输入验证码</string>
    <string name="first">首页</string>
    <string name="nearby">附近</string>
    <string name="info">消息</string>
    <string name="me">我的</string>
    <string name="hire_info">执着的豆芽</string>
    <string name="bardian_name">个性签名:</string>
    <string name="serv_me">服务范围:</string>
    <string name="can_you">你要陪我:</string>
    <string name="time">08:15</string>
    <string name="button_see">立即查看</string>
    <string name="request">要求</string>
    <string name="address">地址</string>
    <string name="time_table">时间</string>
    <string name="rent_money">租金</string>
    <string name="post">发布</string>
    <string name="exit">退出</string>
    <string name="yaya">丫丫：</string>
    <string name="about_us">关于我们</string>
    <string name="banben_jiance">版本检测</string>
    <string name="serv_phone">客服电话</string>
    <string name="clear_cecha">清理缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="shenfen_front">身份证正面</string>
    <string name="shenfen_side">身份证反面</string>
    <string name="qingxi_photo">清晰照片</string>
    <string name="name">真实姓名</string>
    <string name="shenfen_num">身份证号</string>
    <string name="trues">确认</string>
    <string name="distant">3.5米</string>
    <string name="sum_show">余额显示</string>
    <string name="add_bank">添加银行卡</string>
    <string name="jiaoyijilu">交易记录</string>
    <string name="add_money">充值</string>
    <string name="delect_money">提现</string>
    <string name="assess">评价</string>
     <string name="date">2015-12-12</string>
     <string name="reply">回复：</string>
     <string name="head">头像</string>
     <string name="nickname">昵称</string>
     <string name="sex">性别</string>
     <string name="age">年龄</string>
     <string name="area">地区</string>
     <string name="hobby">爱好</string>
     <string name="xingzuo">星座</string>
     <string name="height">身高</string>
     <string name="profession">职业</string>
     <string name="photo">相册</string>
     <string name="autograph">签名</string>
     <string name="me_info">完善资料</string>
     <string name="me_zhanghu">我的帐户</string>
     <string name="me_yuyue">我的预约</string>
     <string name="me_shenfen">身份认证</string>
     <string name="me_dingdan">我的订单</string>
     <string name="me_fabu">我的发布</string>
     <string name="set">设置</string>
     <string name="make_date">预约日期</string>
     <string name="make_time">预约时间</string>
     <string name="make_place">预约地点</string>
     <string name="make_phone">联系手机</string>
     <string name="make_pay">愿意付费</string>
     <string name="make_serv">服务需求</string>
     <string name="serve">服务</string>
      <string name="yuan">元</string>
      <string name="hour">100元/小时</string>
      <string name="skill">技能:</string>
      <string name="hire_area">出租范围:</string>
      <string name="strong_point">特长:</string>
      <string name="hobbies">兴趣爱好:</string>
      <string name="xunqiu">你要陪我:</string>
       <string name="pull_to_refresh_pull_down_label">""</string>
    <string name="pull_to_refresh_release_label">""</string>
    <string name="pull_to_refresh_refreshing_label">""</string>
    <string name="pull_to_refresh_tap_label">""</string>
    <string name="updated_at">""</string>
    <string name="pull_to_refresh">""</string>
    <string name="refreshing">""</string>
    <string name="release_to_refresh">""</string>
    <string name="not_updated_yet">""</string>
	<string name="updated_just_now">""</string>
	<string name="time_error">""</string>
    <!--  <string name="pull_to_refresh_pull_down_label">滑动刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="not_updated_yet">暂未更新过</string>
	<string name="updated_just_now">刚刚更新</string>
	<string name="time_error">时间有问题</string> -->
	
	    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate">Animate scale to random value</string>
    <string name="menu_zoom_random">Set scale to random value</string>
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
</resources>
