<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:clipToPadding="true" >

    <include 
        layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="40dp"
       android:orientation="vertical"
       android:padding="30dp" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/phonenum" />

       <EditText
           android:id="@+id/name"
           android:layout_width="match_parent"
           android:layout_height="35dp"
           android:hint="@string/qphonenum" 
           android:layout_marginBottom="20dp"
           android:paddingLeft="10dp"
           android:background="@drawable/frame_bg"
           android:inputType="number"
           android:textSize="@dimen/font_14"
           android:paddingTop="@dimen/padding4"
           android:paddingBottom="@dimen/padding4"
           android:maxLines="1"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/pwd" />

       <EditText
           android:id="@+id/password"
           android:layout_width="match_parent"
           android:layout_height="35dp"
           android:hint="@string/qpwd"
           android:inputType="textPassword" 
           android:background="@drawable/frame_bg"
           android:textSize="@dimen/font_14"
           android:paddingTop="@dimen/padding4"
           android:paddingLeft="10dp"
           android:paddingBottom="@dimen/padding4"
           android:lines="1"/>

       <TextView
           android:id="@+id/tv_forget"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="right"
           android:text="@string/fopwd" 
           android:layout_marginTop="10dp"
           android:paddingBottom="20dp"
           android:textColor="@color/lanse"/>

       <Button 
           android:id="@+id/btn_login"
           style="@style/button02"
           android:text="@string/login"
           android:layout_marginBottom="15dp"
           />
       <Button
           android:id="@+id/btn_register" 
           style="@style/button02"
           android:text="@string/register"
           android:layout_marginBottom="15dp"
           />
   </LinearLayout>
   </ScrollView>
   <include layout="@layout/title2"
       android:visibility="gone"/>

</LinearLayout>
