<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingTop"
        android:paddingBottom="@dimen/paddingTop"
        >
        <com.sanmi.view.CircularImage
            android:id="@+id/iv_mf_touxiang_xunqiu" 
            android:layout_width="@dimen/touxiang65"
            android:layout_height="@dimen/touxiang65"
            android:src="@drawable/morentu"
            android:layout_marginLeft="10dp"
           />
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginLeft="20dp">
            <TextView
                 android:id="@+id/mf_hire_info_xunqiu"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:textSize="@dimen/ziti14"
                android:text="@string/hire_info"
                android:textColor="@color/lanzise"/>
            <TextView 
                android:id="@+id/mf_bardian_name_xunqiu"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="@string/bardian_name"
                android:textSize="@dimen/ziti12"
                android:layout_below="@id/mf_hire_info_xunqiu"
                />
            <TextView 
                android:id="@+id/mf_tv_name_xunqiu"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="信息"
                android:textSize="@dimen/ziti12"
                android:layout_below="@id/mf_hire_info_xunqiu"
                android:layout_toRightOf="@id/mf_bardian_name_xunqiu"
                />
            <TextView 
                android:id="@+id/mf_serv_me_xunqiu"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="@string/xunqiu"
                android:textSize="@dimen/ziti12"
                android:layout_below="@id/mf_bardian_name_xunqiu"
                android:textColor="@color/lanzise"/>
            <TextView 
                android:id="@+id/mf_serv_me_info_xunqiu"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="xinxi"
                android:textSize="@dimen/ziti12"
                android:layout_below="@id/mf_bardian_name_xunqiu"
                android:layout_toRightOf="@id/mf_serv_me_xunqiu"
                />
            <TextView 
                android:id="@+id/mf_distance_xunqiu"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="@string/distant"
                android:textSize="@dimen/ziti10"
                android:layout_below="@id/mf_serv_me_xunqiu"
                android:textColor="@color/huise"
                />
        </RelativeLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            >
            <TextView 
                android:id="@+id/mf_tv_f_time_xunqiu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ziti10"
                android:textColor="@color/huise"
                android:text="@string/time"/>
            <!-- <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_see"
                android:textColor="@color/baise"
                android:textSize="@dimen/ziti10"
                android:background="@color/qianhongse"
                android:layout_marginTop="30dp"/> -->
        </LinearLayout>
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/qianhui_color"
        />

</LinearLayout>
