<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include
        android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="30dp" >

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Top40"
                android:padding="@dimen/padding4"
                android:layout_marginBottom="20dp"
                android:background="@drawable/frame_bg"
                android:drawableLeft="@drawable/re_0"
                android:hint="@string/qphonenum"
                android:inputType="number"
                android:lines="1"
               
                android:textSize="@dimen/font_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Top40"
                android:padding="@dimen/padding4"
                android:layout_marginBottom="20dp"
                android:background="@drawable/frame_bg"
                android:gravity="center_vertical"
                 >

                <EditText
                    android:id="@+id/et_mobilecode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/et_bgxml"
                    android:drawableLeft="@drawable/re_1"
                    android:hint="@string/qyanzhengma"
                    android:layout_marginLeft="4dp"
                    android:inputType="number"
                    android:lines="1"
                    android:textSize="@dimen/font_14" />

                <TextView
                    android:id="@+id/tv_yanzhengma"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/et_mobilecode"
                    android:layout_alignBottom="@+id/et_mobilecode"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/money_bg"
                    android:gravity="center"
                    android:padding="@dimen/padding4"
                    android:text="@string/yanzhengma"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Top40"
                android:padding="@dimen/padding4"
                android:layout_marginBottom="20dp"
                android:background="@drawable/frame_bg"
                android:drawableLeft="@drawable/re_2"
                android:hint="@string/qpwd"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="@dimen/font_14" />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Top40"
                android:padding="@dimen/padding4"
                android:layout_marginBottom="20dp"
                android:background="@drawable/frame_bg"
                android:drawableLeft="@drawable/re_3"
                android:hint="@string/qpwd_true"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="@dimen/font_14" />

            <!-- <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Top40"
                android:padding="@dimen/padding4"
                android:background="@drawable/frame_bg"
                android:drawableLeft="@drawable/re_3"
                android:hint="昵称"
                android:lines="1"
                android:textSize="@dimen/font_14" /> -->

            <Button
                android:id="@+id/register"
                style="@style/button02"
                android:layout_marginTop="30dp"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp" >

                <CheckBox
                    android:id="@+id/register_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:checked="true" />

                <TextView
                    android:id="@+id/xieyi"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.65"
                    android:gravity="center_vertical"
                    android:text="我已同意并阅读"
                    android:textColor="@color/huise" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title2"
        android:visibility="gone" />

</LinearLayout>