<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingTop"
        android:paddingBottom="@dimen/paddingTop"
        >
        <com.sanmi.view.CircularImage
            android:id="@+id/iv_gc_touxiang" 
            android:layout_width="@dimen/touxiang65"
            android:layout_height="@dimen/touxiang65"
            android:src="@drawable/morentu"
            android:layout_marginLeft="10dp"
           />
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginLeft="20dp">
            <TextView
                 android:id="@+id/gc_hire_info"
                android:layout_width="wrap_content"
                 android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="@string/hire_info"
                android:textSize="@dimen/ziti14"
                android:textColor="@color/lanzise"/>
            <TextView 
                android:id="@+id/gc_bardian_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="@string/bardian_name"
                android:textSize="@dimen/ziti12"
                android:layout_below="@id/gc_hire_info"
                />
            <TextView 
                android:id="@+id/gc_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="信息"
                 android:textColor="@color/shenhui"
                 android:singleLine="true"
                android:layout_marginLeft="@dimen/margin10dp"
                android:textSize="@dimen/ziti12"
                android:layout_below="@id/gc_hire_info"
                android:layout_toRightOf="@id/gc_bardian_name"
               />
            <TextView 
                android:id="@+id/gc_serv_me"
                android:layout_width="wrap_content"
                 android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="@string/serv_me"
                android:textSize="@dimen/ziti12"
                android:layout_below="@id/gc_bardian_name"
                android:textColor="@color/lanzise"/>
            <TextView 
                android:id="@+id/gc_distance"
                android:layout_width="wrap_content"
                 android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:text="@string/distant"
                android:textSize="@dimen/ziti10"
                android:layout_below="@id/gc_serv_me"
                />

            <TextView
                android:id="@+id/gc_serv_me_info"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/Top"
                android:layout_alignBaseline="@+id/gc_serv_me"
                android:layout_alignBottom="@+id/gc_serv_me"
                android:layout_alignLeft="@+id/gc_tv_name"
                android:gravity="center_vertical"
                android:textColor="@color/shenhui"
                android:textSize="@dimen/ziti12"
                 android:singleLine="true"
                android:text="xinxi"
                 />

        </RelativeLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            >
            <TextView 
                android:id="@+id/gc_tv_f_time"
                android:layout_width="wrap_content"
                 android:layout_height="@dimen/textheight20"
                android:gravity="center_vertical"
                android:textSize="@dimen/ziti10"
                android:text="@string/time"/>
            <!-- <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_see"
                android:textColor="@color/baise"
                android:background="@color/qianhongse"
                android:textSize="@dimen/ziti10"
                android:layout_marginTop="30dp"/> -->
        </LinearLayout>
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/qianhui_color"
        />

</LinearLayout>
